Added checkbox and delete icon

--- a/Planner/index.html
+++ b/Planner/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="text/stylesheet" href="main.css"/>
+        <link rel="stylesheet" href="main.css"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <script src="main.js"></script>
 
     </head>
@@ -12,6 +13,7 @@
             <button id="addButton" onclick="addTask()">Add</button>
         </form>
         <ul id="todoList">
+            <li><input type="checkbox"><span>Complete To-Do List</span><i class="material-icons">close</i></li>
         </ul>
     </body>
 
