--- a/Planner/index.html
+++ b/Planner/index.html
@@ -13,7 +13,7 @@
             <button id="addButton" onclick="addTask()">Add</button>
         </form>
         <ul id="todoList">
-            <li><input type="checkbox"><span>Complete To-Do List</span><i class="material-icons">close</i></li>
+            <li><input type="checkbox"><span>Complete To-Do List</span><i class="material-icons" onclick="removeListItem()">close</i></li>
         </ul>
     </body>
 
