added Completed Tasks section

--- a/Planner/index.html
+++ b/Planner/index.html
@@ -11,7 +11,9 @@
             <input id="taskField" type="text" placeholder="Add task..." />
             <button id="addButton" onclick="addTask()">Add</button>
         </form>
-        <ul id="todoList">
+        <ul id="todoList"><label>Current Tasks</label>
+        </ul>
+        <ul id="completedTasks"><label>Completed Tasks</label>
         </ul>
     </body>
 </html>
